--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.Wasooli_aab" parent="Base.Theme.Wasooli_aab" />
+
+    <style name="NavigationTheme">
+<!--        text color-->
+        <item name="colorPrimary">@color/accent_color</item>
+
+<!--        background color-->
+        <item name="colorControlHighlight">@color/primary_color</item>
+
+    </style>
 </resources>
