--- a/app/src/main/res/layout/rv_home_row_item.xml
+++ b/app/src/main/res/layout/rv_home_row_item.xml
@@ -82,41 +82,22 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="10dp"
                 android:layout_weight="1"
                 android:gravity="center">
 
-                <Button
-                    android:id="@+id/edit_button"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="0dp"
-                    android:paddingTop="5dp"
-                    android:drawableEnd="@drawable/ic_baseline_edit_24"
-                    android:drawableTint="@color/accent_color"
-                    android:fontFamily="sans-serif-condensed"
-                    android:paddingHorizontal="10dp"
-                    android:text="Edit"
-                    android:backgroundTint="@color/primary_color"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="@color/accent_color" />
-                <Button
-                    android:id="@+id/delete_button"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp"
-                    android:backgroundTint="@color/primary_color"
-                    android:drawableEnd="@drawable/ic_delete"
-                    android:drawableTint="#EDEDED"
-                    android:fontFamily="sans-serif-condensed"
-                    android:paddingHorizontal="15dp"
-                    android:text="Delete"
-                    android:paddingTop="5dp"
-                    android:textAlignment="center"
-                    android:textAllCaps="false"
-                    android:textColor="#F6F4F4" />
+                <ImageView
+                    android:id="@+id/menu_button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="10dp"
+                    android:src="@drawable/ic_menu_more"
+                    android:contentDescription="Three Dot Menu"
+                    app:tint="@color/primary_color" />
 
             </LinearLayout>
         </LinearLayout>
