--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,15 @@
         <item name="colorControlHighlight">@color/primary_color</item>
 
     </style>
+
+    // for recyclerView on home Activity popup menu
+    <style name="PopupMenuStyle" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:popupBackground">@color/accent_color</item>
+<!--        <item name="android:textColor">@color/accent_color</item>-->
+        <item name="android:layout_width">200dp</item> <!-- Adjust the width as per your needs -->
+    </style>
+
+
+
+
 </resources>
