DummyList Crud from CustomerActivity

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,9 +7,9 @@
             android:title="Home"
             android:icon="@drawable/ic_home"/>
         <item
-            android:id="@+id/nav_chart"
+            android:id="@+id/nav_customer"
             android:title="Chart"
-            android:icon="@drawable/ic_bar_chart"/>
+            android:icon="@drawable/ic_person"/>
     </group>
 
     <item android:title="Profile">
