--- a/app/src/main/res/layout/activity_add_edit_employee.xml
+++ b/app/src/main/res/layout/activity_add_edit_employee.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer.AddEditCustomerActivity">
-
+    tools:context=".employee.AddEditEmployeeActivity">
     <ImageView
         android:id="@+id/login_bg"
         android:layout_width="match_parent"
@@ -39,7 +38,7 @@
             android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add \nCustomer"
+            android:text="Add \nEmployee"
             android:textStyle="bold"
             android:textColor="@color/accent_color"
             android:textSize="28sp"
@@ -50,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="150dp">
+            android:layout_marginTop="130dp">
 
             <!--            material design text Fields-->
             <com.google.android.material.textfield.TextInputLayout
@@ -124,18 +123,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:hint="Quantity"
+                android:hint="Date "
                 android:textColorHint="@color/secondary_color"
                 app:boxStrokeColor="@color/input_border_color"
                 app:boxStrokeWidthFocused="2dp"
                 app:hintTextColor="@color/primary_color"
-                app:startIconDrawable="@drawable/ic_bar_chart"
+                app:startIconDrawable="@drawable/ic_calender"
                 app:startIconTint="@color/primary_color"
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/primary_color"
                 >
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edt_quantity"
+                    android:id="@+id/edt_date"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
@@ -159,6 +158,5 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
