--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -42,17 +42,15 @@
                 android:src="@drawable/ic_menu"
                 app:tint="@color/white" />
 
-            <TextView
+            <androidx.appcompat.widget.SearchView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/img_btn_menu"
-                android:text="Dashboard"
-                android:layout_marginStart="20dp"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/accent_color"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                />
 
-                android:layout_centerVertical="true"/>
+
             <ImageView
 
                 android:layout_alignParentEnd="true"
