--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:openDrawer="start"
+    tools:openDrawer=""
     tools:context=".DashboardActivity">
 
     <com.google.android.material.navigation.NavigationView
@@ -41,25 +41,44 @@
                 android:layout_width="35dp"
                 android:src="@drawable/ic_menu"
                 app:tint="@color/white" />
-
-            <androidx.appcompat.widget.SearchView
+            <TextView
+                android:id="@+id/searchText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Search"
+                android:textColor="@color/accent_color"
+                android:textSize="18sp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:layout_toEndOf="@+id/img_btn_menu"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
-                />
+                android:clickable="true"
+                android:focusable="true" />
 
-
-            <ImageView
-
-                android:layout_alignParentEnd="true"
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/searchView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/img_btn_menu"
+                android:background="@android:color/transparent"
+                android:imeOptions="actionSearch"
+                android:textColor="@color/accent_color"
+                android:textColorHint="@color/accent_color"
+                android:textStyle="bold"
+                android:focusable="false"
                 android:layout_centerVertical="true"
-                android:layout_height="40dp"
-                android:layout_width="40dp"
-                android:padding="5dp"
-                android:src="@drawable/ic_add"
-                app:tint="@color/white" />
+                app:iconifiedByDefault="false"
+                app:searchIcon="@null"
+                app:queryHint="" />
+<!--            <ImageView-->
+
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:layout_width="40dp"-->
+<!--                android:padding="5dp"-->
+<!--                android:src="@drawable/ic_add"-->
+<!--                app:tint="@color/white" />-->
         </RelativeLayout>
 
     </LinearLayout>
