--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -4,11 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/accent_color"
-    tools:context=".customer.CustomerActivity">
-
-<!--    Appbar-->
+    tools:context=".Delivery.DeliveryActivity">
+    <!--    Appbar-->
     <RelativeLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -30,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/img_btn_back"
-            android:text="Customers"
+            android:text="Delivery"
             android:layout_marginStart="20dp"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -44,11 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/app_bar"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        tools:listitem="@layout/rv_customer_row_item" />
+        android:padding="10dp"
+        tools:listitem="@layout/rv_delivery_row_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fBtn_add"
