--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,6 +12,10 @@
             android:icon="@drawable/ic_person"/>
 
         <item
+            android:id="@+id/nav_customers"
+            android:title="Customers"
+            android:icon="@drawable/ic_person"/>
+        <item
             android:id="@+id/nav_vendor"
             android:title="Vendor"
             android:icon="@drawable/ic_vendor"/>
